--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,40 +1,40 @@
 body{
     margin: 0;
+    font-family: "Oswald";
 }
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
-
-    padding: 10px 30px;
-}
-
-a.button {
-    font-size: x-large;
-    margin-right: 10px; 
-    padding: 10px;
-    border: 0.1px solid black;
-    background-color: rgb(217, 223, 248);
-    text-align: center;
-    cursor: pointer;
-    color: black;
-    text-decoration: none;
-    border-radius: 25px;
-}
-
 header {
+    display: flex;
     justify-content: space-between;
     margin-top: 0px;
     margin-bottom: 35;
-    position: -webkit-sticky;
     position: sticky;
     top: 0px;
-    background-color: rgb(177, 207, 231);
+    background-color:#8cabf0;
 }
 
-a.button:hover {
-    background-color:rgb(177, 207, 231);
+header ul {
+    list-style-type: none; /*quito el estilo de la lista para que no me salgan los puntos por defecto*/
+    margin: 0;
+    padding: 0; /*Margin y padding a 0 para que se rellene por completo el botón del menú*/
 }
+
+header ul li {
+    float: left;
+}
+
+header ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+header ul li a:hover {
+    background-color: #6e6e6e;
+}
+
+
 
 a.i {
     font-size: 36px;
