Detalle del hover

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,9 @@ header {
     background-color: #8cabf0;
     width: 100%;
 }
-
+header  a :hover{
+    color: #f3d68e;
+}
 header ul {
     list-style-type: none;
     /*quito el estilo de la lista para que no me salgan los puntos por defecto*/
